<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/recipesFragment"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/recipes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/myRecipesFragment"
        android:icon="?attr/actionModePasteDrawable"
        android:title="@string/my_recipes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/addRecipeFragment"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_new_recipe"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>