<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/addRecipe"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Modules.AddRecipe.AddRecipeFragment">

<ImageView
    android:id="@+id/recipeImage"
    android:layout_width="191dp"
    android:layout_height="199dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:contentDescription="@string/recipe_image"
    android:scaleType="centerInside"
    android:src="@drawable/meal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.013" />

<TextView
    android:id="@+id/recipeTitleTextview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="168dp"
    android:text="@string/recipe_title_textview"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="@+id/recipeImage"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/recipeImage" />

<TextView
    android:id="@+id/recipeIngredientsTextview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:text="@string/recipe_ingredients_textview"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/recipeTitleTextview" />

<TextView
    android:id="@+id/recipeStepsTextview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:text="@string/recipe_preparation_steps_textview"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/recipeIngredientsTextBox" />

<EditText
    android:id="@+id/recipeTitleTextBox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:autofillHints=""
    android:ems="10"
    android:inputType="text"
    android:text="@string/recipe_title_textBox"
    app:layout_constraintBaseline_toBaselineOf="@+id/recipeTitleTextview"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/recipeTitleTextview"
    tools:ignore="LabelFor" />

<EditText
    android:id="@+id/recipeIngredientsTextBox"
    android:layout_width="371dp"
    android:layout_height="99dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:autofillHints=""
    android:ems="10"
    android:gravity="start"
    android:inputType="text"
    android:selectAllOnFocus="false"
    android:singleLine="false"
    android:text="@string/recipe_ingredients_textbox"
    android:textAppearance="@style/TextAppearance.AppCompat.Small"
    app:layout_constraintBottom_toTopOf="@+id/recipeStepsTextview"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/recipeIngredientsTextview"
    tools:ignore="LabelFor" />

<EditText
    android:id="@+id/recipePreparationStepsTextBox"
    android:layout_width="370dp"
    android:layout_height="170dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:autofillHints=""
    android:ems="10"
    android:freezesText="false"
    android:gravity="start"
    android:inputType="text"
    android:singleLine="false"
    android:text="@string/recipe_preparation_steps_textbox"
    android:textAppearance="@style/TextAppearance.AppCompat.Small"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/recipeStepsTextview"
    tools:ignore="LabelFor" />

<Button
    android:id="@+id/saveRecipeBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="16dp"
    android:width="180dp"
    android:text="@string/recipe_save_recipe_btn_text"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/cancelRecipeBtn"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/recipePreparationStepsTextBox"
    app:layout_constraintVertical_bias="0.524" />

<Button
    android:id="@+id/cancelRecipeBtn"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="16dp"
    android:text="@string/recipe_cancel_recipe_btn_text"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/saveRecipeBtn"
    app:layout_constraintTop_toBottomOf="@+id/recipePreparationStepsTextBox"
    app:layout_constraintVertical_bias="0.524" />
</androidx.constraintlayout.widget.ConstraintLayout>