<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modules.Profile.ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileCircularImageView"
        android:layout_width="186dp"
        android:layout_height="168dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/add_image_icon"
        app:layout_constraintBottom_toTopOf="@+id/topProfileValuesGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/profileBarrierGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="299dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="139dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profileCircularImageView" />

    <TextView
        android:id="@+id/profileEmailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomProfileValuesGuideline"
        app:layout_constraintEnd_toStartOf="@+id/profileBarrierGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileUsernameTextView" />

    <TextView
        android:id="@+id/profileFirstNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/first_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/profileLastNameTextView"
        app:layout_constraintEnd_toStartOf="@+id/profileBarrierGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topProfileValuesGuideline" />

    <TextView
        android:id="@+id/profileLastNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/last_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/profileUsernameTextView"
        app:layout_constraintEnd_toStartOf="@+id/profileBarrierGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileFirstNameTextView" />

    <TextView
        android:id="@+id/profileUsernameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/profileEmailTextView"
        app:layout_constraintEnd_toStartOf="@+id/profileBarrierGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileLastNameTextView" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editProfileFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="editProfile"
        android:src="@android:drawable/ic_menu_edit"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/light_orange"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomProfileValuesGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="521dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topProfileValuesGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="205dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileCircularImageView" />

    <TextView
        android:id="@+id/emailValueTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/bottomProfileValuesGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/profileBarrierGuideline"
        app:layout_constraintTop_toBottomOf="@+id/profileUsernameValueEditText" />

    <EditText
        android:id="@+id/profileFirstnameValueEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/first_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/profileLastnameValueEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profileBarrierGuideline"
        app:layout_constraintTop_toBottomOf="@+id/topProfileValuesGuideline" />

    <EditText
        android:id="@+id/profileLastnameValueEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/last_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/profileUsernameValueEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileBarrierGuideline"
        app:layout_constraintTop_toBottomOf="@+id/profileFirstnameValueEditText" />

    <EditText
        android:id="@+id/profileUsernameValueEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emailValueTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/profileBarrierGuideline"
        app:layout_constraintTop_toBottomOf="@+id/profileLastnameValueEditText" />

    <Button
        android:id="@+id/saveProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profileBarrierGuideline"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button_background"
        app:backgroundTint="@color/button_color_state"/>

    <Button
        android:id="@+id/cancelEditProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/profileBarrierGuideline"
        android:background="@drawable/button_background"
        app:backgroundTint="@color/button_color_state"/>

    <ProgressBar
        android:id="@+id/progressBarProfileFragment"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/profileLogoutBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="32dp"
        android:text="@string/signout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editProfileFloatingActionButton"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button_background"
        app:backgroundTint="@color/button_color_state"/>
</androidx.constraintlayout.widget.ConstraintLayout>